C2: assert(n != __null) failed: Bad immediate dominator info.

XMLWordPrintable

    • b08

        The attached test fails with the following assertion and seems to be unrelated to JDK-8262017:

        To reproduce:
        $ java -Xcomp -XX:-TieredCompilation -XX:CompileOnly=Test Test.java

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S79226/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/0cb697b6-5006-4d18-afca-8f82d7082f5e/runs/5d51f3ad-e036-4803-805d-9e13517ddb05/workspace/open/src/hotspot/share/opto/loopnode.hpp:1092), pid=167157, tid=167170
        # assert(n != __null) failed: Bad immediate dominator info.
        #
        # JRE version: Java(TM) SE Runtime Environment (17.0+25) (fastdebug build 17-ea+25-LTS-2214)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17-ea+25-LTS-2214, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x12fad4b] PhaseIdealLoop::idom_no_update(unsigned int) const+0x16b
        ...........
        Command Line: -Xcomp -XX:-TieredCompilation -XX:CompileOnly=Test --add-modules=ALL-DEFAULT jdk.compiler/com.sun.tools.javac.launcher.Main Test.java
        ...........
        Current thread (0x00007f85e4235ba0): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=167170, stack(0x00007f85c0d37000,0x00007f85c0e38000)]


        Current CompileTask:
        C2: 1929 82 b Test::test (93 bytes)

        Stack: [0x00007f85c0d37000,0x00007f85c0e38000], sp=0x00007f85c0e31e90, free space=1003k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x12fad4b] PhaseIdealLoop::idom_no_update(unsigned int) const+0x16b
        V [libjvm.so+0x13088f1] PhaseIdealLoop::clone_loop_handle_data_uses(Node*, Node_List&, IdealLoopTree*, IdealLoopTree*, Node_List*&, Node_List*&, Node_List*&, Node_List&, unsigned int, PhaseIdealLoop::CloneLoopMode)+0x581
        V [libjvm.so+0x130a16f] PhaseIdealLoop::clone_loop(IdealLoopTree*, Node_List&, int, PhaseIdealLoop::CloneLoopMode, Node*)+0x110f
        V [libjvm.so+0x12c5470] PhaseIdealLoop::do_unroll(IdealLoopTree*, Node_List&, bool)+0x220
        V [libjvm.so+0x12cbed0] IdealLoopTree::iteration_split_impl(PhaseIdealLoop*, Node_List&) [clone .part.0]+0x460
        V [libjvm.so+0x12cc4eb] IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0x13b
        V [libjvm.so+0x12cc3e5] IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0x35
        V [libjvm.so+0x12f8cb5] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0xd55
        V [libjvm.so+0xa1da2a] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x2da
        V [libjvm.so+0xa19470] Compile::Optimize()+0x580
        V [libjvm.so+0xa1bec5] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1585
        V [libjvm.so+0x841aba] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1ea
        V [libjvm.so+0xa2c889] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xfb9
        V [libjvm.so+0xa2d5f8] CompileBroker::compiler_thread_loop()+0x5a8
        V [libjvm.so+0x18a3a11] JavaThread::thread_main_inner()+0x271
        V [libjvm.so+0x18ab610] Thread::call_run()+0x100
        V [libjvm.so+0x157721e] thread_native_entry(Thread*)+0x10e

          1. hs_err_pid167157.log
            70 kB
            Christian Hagedorn
          2. Test.java
            0.6 kB
            Christian Hagedorn

              Assignee:
              Vladimir Kozlov
              Reporter:
              Christian Hagedorn
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: