8268261: C2: assert(n != __null) failed: Bad immediate dominator info.

Reviewed-by: iveresov, vlivanov